account_detail graph align (issue #138)

--- a/static/css/dashboard/account_detail.css
+++ b/static/css/dashboard/account_detail.css
@@ -424,9 +424,8 @@
 .seller_products_each_wrapper .circle-wrapper{
 	width:100%;
 	height:100%;
-    margin-top:5px;
-    margin-left:5px;
-	/*background-color:grey;*/
+    margin-top:0px;
+    margin-left:8%;
 }
 /* arrow for 1 */
 /*
@@ -575,11 +574,15 @@
 
 .seller_products_each_wrapper .cash{
   position:relative;
-    display: inline-block;
-    width:94%;
+  /*  display: inline-block;
+    width:91%;
     height: 15%;
     left:-3%;
   padding-top:3%;
+  */
+    width:150px;
+    height:25px;
+    left:-6%;
   border:1px solid grey;
   border-radius:15px;
   text-align:center;
